[gd_scene load_steps=26 format=2]

[ext_resource path="res://Misc/ShopItem.gd" type="Script" id=1]
[ext_resource path="res://Misc/HeartFilled.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Passion_One/PassionOne-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Montserrat/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Misc/Interact.tscn" type="PackedScene" id=5]
[ext_resource path="res://Misc/ErrorFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Misc/Coin.png" type="Texture" id=7]
[ext_resource path="res://Misc/CoinSmall.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -8
extra_spacing_char = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 6
outline_color = Color( 0.670588, 0.392157, 0.0901961, 1 )
extra_spacing_char = 3
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "default"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "purchased"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.85, 0.85 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Price:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Popup:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ), Vector2( 0, -80 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Price:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -90 ), Vector2( 0, -120 ) ]
}

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.760684, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.3592 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 42.35
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 620.51
initial_velocity_random = 0.51
angular_velocity = 103.38
angular_velocity_random = 0.36
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.541311, 0.997151 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 0.5209 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.4329 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 1
emission_sphere_radius = 44.32
flag_disable_z = true
spread = 33.0
gravity = Vector3( -700, 0, 0 )
initial_velocity = 553.85
initial_velocity_random = 0.3
angular_velocity = 177.23
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 16 )
color_ramp = SubResource( 14 )

[node name="Item" type="Node2D"]
script = ExtResource( 1 )

[node name="Detect" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )

[node name="Popup" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -30 )
z_index = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 300 )

[node name="Name" type="Label" parent="Popup/VBoxContainer"]
margin_right = 300.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Placeholder"
align = 1
autowrap = true

[node name="Info" type="Label" parent="Popup/VBoxContainer"]
margin_top = 41.0
margin_right = 300.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "The quick brown fox"
align = 1
autowrap = true

[node name="Interact" parent="Popup" instance=ExtResource( 5 )]
position = Vector2( 0, -170 )
interaction = "Buy"
active = true

[node name="Price" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -90 )
z_index = 12

[node name="Label" type="Label" parent="Price"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -17.0
margin_right = 102.0
margin_bottom = 17.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.956863, 0.945098, 0.211765, 1 )
text = "300"
align = 1

[node name="NoNeed" type="Node2D" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -30 )
z_index = 12

[node name="Label" type="Label" parent="NoNeed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -22.5
margin_right = 350.0
margin_bottom = 22.5
rect_min_size = Vector2( 700, 0 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You don't need this right now."
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="NoNeed"]
anims/default = SubResource( 5 )

[node name="NotEnough" type="Node2D" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -30 )

[node name="Label" type="Label" parent="NotEnough"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -45.0
margin_right = 350.0
rect_min_size = Vector2( 700, 0 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Not Enough Coins."
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="NotEnough"]
anims/default = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/purchased = SubResource( 7 )

[node name="BigCoin" type="Particles2D" parent="."]
rotation = -1.5708
emitting = false
amount = 25
lifetime = 0.5
process_material = SubResource( 12 )
texture = ExtResource( 7 )

[node name="SmallCoin" type="Particles2D" parent="."]
rotation = -1.5708
emitting = false
amount = 50
process_material = SubResource( 17 )
texture = ExtResource( 8 )

[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_detect_body_exited"]
